feat: add comentário

--- a/exemplo.html
+++ b/exemplo.html
@@ -9,5 +9,13 @@
 Olá mundo!
 
 <p>Olá mundo!</p>
+
+<!-- Estudando titulos -->
+<h1>Aula de HTML</h1>
+<h2>Aula de HTML</h2>
+<h3>Aula de HTML</h3>
+<h4>Aula de HTML</h4>
+<h5>Aula de HTML</h5>
+<h6>Aula de HTML</h6>
 </body>
 </html>
