feat: add uso do strong

--- a/exemplo01.html
+++ b/exemplo01.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        Há <b>três coisas</b> na vida<sub>2</sub> que <i>nunca voltam atrás</i>: 
+        <strong>Há</strong> <b>três coisas</b> na vida<sub>2</sub> que <i>nunca voltam atrás</i>: 
         a flecha lançada<sup>2</sup>,<br/> 
         a palavra pronunciada e a oportunidade perdida.
         <hr/>
